@@ -40,7 +40,11 @@ they occurred between. For more detailed information see the
 
 @item 5 new move-cursor commands (move-cursor -northwest, -northeast, -southwest, -southeast), and move-cursor-center [Christopher Bratusek]
 
-@item Added fullscreen, fullscreen-xinerama and new-workspace matches [Jeremy Hankins]
+@item Added fullscreen, fullscreen-xinerama, new-workspace and new-viewport window-matchers [Jeremy Hankins]
+
+@item Added viewport-windows function (equivalent to workspace-windows) [Jeremy Hankins]
+
+@item Added viewport-boundary-mode dynamic (creates a new viewport then hitting the screen-edge) [Jeremy Hankins]
 
 @item When GNOME Integration is loaded, the apps menu now shows the content of the GNOME Menu (uncategorized atm) [Christopher Bratusek]
 
