@@ -1,3 +1,9 @@
+2009-07-27  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/viewport.jl: Added viewport-boundary-mode dynamic [Jeremy Hankins]
+
+	* lisp/sawfish/wm/viewport.jl
+	* lisp/sawfish/wm/ext/match-window.jl: added new-viewport window matcher and viewport-windows function [Jeremy Hankins]
+
 2009-07-26  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/tabs/tab.jl
 	* lisp/sawfish/wm/tabs/tabgroup.jl
